# flask

./: .env  .gitignore  BYTETRACKER_CAMERA_UPDATE.md  BYTETRACKER_UPDATE_NOTES.md  CLAUDE.md  DEBUG_GUIDE.md  FEATURE_UPLOAD_README.md  FILENAME_INPUT_GUIDE.md  FILE_FORWARD_GUIDE.md  FULL_SYSTEM_LAUNCH_UPDATE.md  HARDWARE_INTEGRATION_SUMMARY.md  RFID_IMPLEMENTATION_SUMMARY.md  RFID_INTEGRATION_GUIDE.md  VIDEO_FEATURE_EXTRACTION_GUIDE.md  WEBSOCKET_BRIDGE_GUIDE.md  WEBSOCKET_ROBOT_INTEGRATION.md  WEBSOCKET_VIDEO_FEATURE_GUIDE.md  WebRTC_使用说明.md  apply_compression_optimization.sh  debug_setup.sh  install_dependencies.sh  install_http_dependencies.sh  requirements_webrtc.txt  start_full_system.sh  start_rfid_only.sh  test_camera.py  test_compression.py  test_depth_integration.py  test_feature_data_flow.py  test_file_forward.py  test_filename_preservation.py  test_full_system_launch.py  test_person_following_system.py  test_rfid_integration.py  test_rfid_simple.sh  test_video_compatibility.py  test_video_feature_extraction.py  test_websocket_robot_integration.py  test_websocket_video_features.py  webrtc_integration_summary.md
RFID/: RFID_test.py
features-data/: demo_person_features.xlsx  person.xlsx
self_following_miniproam/: PERFORMANCE_OPTIMIZATION.md  WebRTC配置说明.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json
self_following_miniproam/pages/assistant/: assistant.js  assistant.wxml
self_following_miniproam/pages/control/: README.md  control.js  control.json  control.wxml  control.wxss  utils.wxs
self_following_miniproam/pages/feature/: feature.js  feature.json  feature.wxml  feature.wxss
self_following_miniproam/pages/feature/detail/: detail.js  detail.json  detail.wxml  detail.wxss
self_following_miniproam/pages/history/: history.js  history.json  history.wxml  history.wxss
self_following_miniproam/pages/rfid/: rfid.js  rfid.json  rfid.wxml  rfid.wxss
self_following_miniproam/pages/rfid/history/: history.js  history.json  history.wxml  history.wxss
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Position.msg  RobotStatus.msg  TrackedPerson.msg  TrackedPersonArray.msg  TrackingResult.msg
src/custom_msgs/srv/: FeatureExtraction.srv  GetDistance.srv  PoseDetection.srv  TrackingMode.msg
src/dlrobot_robot_msg/: CMakeLists.txt  package.xml
src/dlrobot_robot_python/: README.md  package.xml  setup.cfg  setup.py
src/dlrobot_robot_python/config/: person_following_params.yaml
src/dlrobot_robot_python/dlrobot_robot_python/: cmd_vel_to_ackermann.py  dlrobot_robot_node.py  parameter_node.py  person_following_controller.py  quaternion_solution.py
src/dlrobot_robot_python/launch/: dlrobot_python.launch.py  dlrobot_python_mini.launch.py  person_following_system.launch.py
src/following_robot/: CHANGELOG.md  README.md  README_FEATURE_EXTRACTION.md  README_HUMAN_DETECTION.md  README_ROBOT_CONTROL.md  example-usage.md  integration-guide-v2.md  package.xml  setup.cfg  setup.py
src/following_robot/config/: bytetracker_params.yaml  websocket_bridge_config.yaml
src/following_robot/data/: README.md
src/following_robot/following_robot/: byte_tracker.py  bytetracker_node.py  feature_extraction_node.py  obtain_features.py  person_detection_distance_node.py  rknn_colour_detect.py  robot_control_node.py  stereo_vision_node.py  websocket_bridge_node.py  yolov8_pose.py  yolov8_pose_detector.py
src/following_robot/launch/: bytetracker_launch.py  demo_launch.py  feature_extraction_launch.py  full_system.launch.py  full_tracking_system_launch.py  person_detection_system.launch.py  robot_control_launch.py  simple_launch.py  stereo_vision_launch.py  websocket_bridge.launch.py
src/following_robot/scripts/: demo_test.py  example_usage.py  quick_test.py  robot_control_test.py  simple_feature_test.py  test_clothing_detection.py  test_display.py  test_feature_extraction.py  test_human_detection.py  test_pose_detection.py  verify_feature_extraction.py  verify_integration.py
src/following_robot/test/: test.py  test_bytetracker.py
src/rfid_reader/: CMakeLists.txt  README.md  package.xml
src/rfid_reader/config/: rfid_debug_params.yaml  rfid_reader_params.yaml
src/rfid_reader/launch/: rfid_debug.launch.py  rfid_reader.launch.py
src/rfid_reader/msg/: RfidReaderStatus.msg  RfidTag.msg  RfidTagArray.msg
src/rfid_reader/rfid_reader/: rfid_reader_node.py  rfid_test_client.py
src/rfid_reader/srv/: RfidCommand.srv
src/rfid_reader/test/: test_rfid_reader.py
src/turn_on_dlrobot_robot/: CMakeLists.txt
src/turn_on_dlrobot_robot/src/: dlrobot_robot.cpp
test_results/: 详细测试_features.xlsx
服务端/: adaptive_video_manager.py  server.py
