<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dlrobot_robot_python</name>
  <version>1.0.0</version>
  <description>Python implementation of DLRobot chassis driver for ROS2 Humble</description>
  <maintainer email="13921994762@163.com">monster</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>dlrobot_robot_msg</depend>
  
  <!-- Python serial communication -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-math</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
