<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>following_robot</name>
  <version>0.0.0</version>
  <description>Following robot with stereo vision and human detection capabilities</description>
  <maintainer email="monster@todo.todo">monster</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS2 核心依赖 -->
  <depend>rclpy</depend>
  
  <!-- 自定义消息 -->
  <depend>custom_msgs</depend>
  
  <!-- 图像处理 -->
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  
  <!-- 小车控制相关 -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>turn_on_dlrobot_robot</depend>
  
  <!-- Python依赖 -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-openpyxl</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-asyncio</exec_depend>
  
  <!-- 系统依赖 -->
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
